# Simple-games-the-best-programming-language

./: CMakeLists.txt  README.md
_osn/: open-simplex-noise.c
flappy/: flappy.c
