cmake_minimum_required(VERSION 3.23)
project(Titaevskiy C)

set(CMAKE_C_STANDARD 11)

include_directories(_mac)
include_directories(_mac/SDL2.framework)
include_directories(_mac/SDL2.framework/Headers)
include_directories(_mac/SDL2.framework/Versions)
include_directories(_mac/SDL2.framework/Versions/A)
include_directories(_mac/SDL2.framework/Versions/A/Headers)
include_directories(_mac/SDL2.framework/Versions/Current)
include_directories(_mac/SDL2.framework/Versions/Current/Headers)
include_directories(_mac/SDL2_ttf.framework)
include_directories(_mac/SDL2_ttf.framework/Headers)
include_directories(_mac/SDL2_ttf.framework/Versions)
include_directories(_mac/SDL2_ttf.framework/Versions/A)
include_directories(_mac/SDL2_ttf.framework/Versions/A/Headers)
include_directories(_mac/SDL2_ttf.framework/Versions/Current)
include_directories(_mac/SDL2_ttf.framework/Versions/Current/Headers)
include_directories(_osn)
include_directories(_stb)
include_directories(_win/glew-2.1.0)
include_directories(_win/glew-2.1.0/include)
include_directories(_win/glew-2.1.0/include/GL)
include_directories(_win/SDL2-2.0.5)
include_directories(_win/SDL2-2.0.5/include)
include_directories(_win/SDL2_ttf-2.0.14)
include_directories(_win/SDL2_ttf-2.0.14/include)
include_directories(_win/tcc-x64/include)
include_directories(_win/tcc-x64/include/sec_api)
include_directories(_win/tcc-x64/include/sec_api/sys)
include_directories(_win/tcc-x64/include/sys)
include_directories(_win/tcc-x64/include/winapi)
include_directories(_win/tcc-x64/libtcc)
include_directories(_win/tcc-x86/include)
include_directories(_win/tcc-x86/include/sec_api)
include_directories(_win/tcc-x86/include/sec_api/sys)
include_directories(_win/tcc-x86/include/sys)
include_directories(_win/tcc-x86/include/winapi)
include_directories(_win/tcc-x86/libtcc)

add_executable(Titaevsky
        _mac/SDL2.framework/Versions/A/Headers/begin_code.h
        _mac/SDL2.framework/Versions/A/Headers/close_code.h
        _mac/SDL2.framework/Versions/A/Headers/SDL.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_assert.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_atomic.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_audio.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_bits.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_blendmode.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_clipboard.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_config.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_config_macosx.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_copying.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_cpuinfo.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_endian.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_error.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_events.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_filesystem.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_gamecontroller.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_gesture.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_haptic.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_hidapi.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_hints.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_joystick.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_keyboard.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_keycode.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_loadso.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_locale.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_log.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_main.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_messagebox.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_metal.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_misc.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_mouse.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_mutex.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_name.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_opengl.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_opengl_glext.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_opengles.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_opengles2.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_opengles2_gl2.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_opengles2_gl2ext.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_opengles2_gl2platform.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_opengles2_khrplatform.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_pixels.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_platform.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_power.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_quit.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_rect.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_render.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_revision.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_rwops.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_scancode.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_sensor.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_shape.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_stdinc.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_surface.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_system.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_syswm.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_thread.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_timer.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_touch.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_types.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_version.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_video.h
        _mac/SDL2.framework/Versions/A/Headers/SDL_vulkan.h
        _mac/SDL2.framework/Versions/Current/Headers/begin_code.h
        _mac/SDL2.framework/Versions/Current/Headers/close_code.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_assert.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_atomic.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_audio.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_bits.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_blendmode.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_clipboard.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_config.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_config_macosx.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_copying.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_cpuinfo.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_endian.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_error.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_events.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_filesystem.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_gamecontroller.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_gesture.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_haptic.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_hidapi.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_hints.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_joystick.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_keyboard.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_keycode.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_loadso.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_locale.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_log.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_main.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_messagebox.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_metal.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_misc.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_mouse.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_mutex.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_name.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_opengl.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_opengl_glext.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_opengles.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_opengles2.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_opengles2_gl2.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_opengles2_gl2ext.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_opengles2_gl2platform.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_opengles2_khrplatform.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_pixels.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_platform.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_power.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_quit.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_rect.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_render.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_revision.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_rwops.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_scancode.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_sensor.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_shape.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_stdinc.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_surface.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_system.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_syswm.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_thread.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_timer.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_touch.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_types.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_version.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_video.h
        _mac/SDL2.framework/Versions/Current/Headers/SDL_vulkan.h
        _mac/SDL2_ttf.framework/Versions/A/Headers/SDL_ttf.h
        _mac/SDL2_ttf.framework/Versions/Current/Headers/SDL_ttf.h
        _osn/open-simplex-noise.c
        _osn/open-simplex-noise.h
        _stb/stb_image.h
        _win/glew-2.1.0/include/GL/eglew.h
        _win/glew-2.1.0/include/GL/glew.h
        _win/glew-2.1.0/include/GL/glxew.h
        _win/glew-2.1.0/include/GL/wglew.h
        _win/SDL2-2.0.5/include/begin_code.h
        _win/SDL2-2.0.5/include/close_code.h
        _win/SDL2-2.0.5/include/SDL.h
        _win/SDL2-2.0.5/include/SDL_assert.h
        _win/SDL2-2.0.5/include/SDL_atomic.h
        _win/SDL2-2.0.5/include/SDL_audio.h
        _win/SDL2-2.0.5/include/SDL_bits.h
        _win/SDL2-2.0.5/include/SDL_blendmode.h
        _win/SDL2-2.0.5/include/SDL_clipboard.h
        _win/SDL2-2.0.5/include/SDL_config.h
        _win/SDL2-2.0.5/include/SDL_cpuinfo.h
        _win/SDL2-2.0.5/include/SDL_egl.h
        _win/SDL2-2.0.5/include/SDL_endian.h
        _win/SDL2-2.0.5/include/SDL_error.h
        _win/SDL2-2.0.5/include/SDL_events.h
        _win/SDL2-2.0.5/include/SDL_filesystem.h
        _win/SDL2-2.0.5/include/SDL_gamecontroller.h
        _win/SDL2-2.0.5/include/SDL_gesture.h
        _win/SDL2-2.0.5/include/SDL_haptic.h
        _win/SDL2-2.0.5/include/SDL_hints.h
        _win/SDL2-2.0.5/include/SDL_joystick.h
        _win/SDL2-2.0.5/include/SDL_keyboard.h
        _win/SDL2-2.0.5/include/SDL_keycode.h
        _win/SDL2-2.0.5/include/SDL_loadso.h
        _win/SDL2-2.0.5/include/SDL_log.h
        _win/SDL2-2.0.5/include/SDL_main.h
        _win/SDL2-2.0.5/include/SDL_messagebox.h
        _win/SDL2-2.0.5/include/SDL_mouse.h
        _win/SDL2-2.0.5/include/SDL_mutex.h
        _win/SDL2-2.0.5/include/SDL_name.h
        _win/SDL2-2.0.5/include/SDL_opengl.h
        _win/SDL2-2.0.5/include/SDL_opengl_glext.h
        _win/SDL2-2.0.5/include/SDL_opengles.h
        _win/SDL2-2.0.5/include/SDL_opengles2.h
        _win/SDL2-2.0.5/include/SDL_opengles2_gl2.h
        _win/SDL2-2.0.5/include/SDL_opengles2_gl2ext.h
        _win/SDL2-2.0.5/include/SDL_opengles2_gl2platform.h
        _win/SDL2-2.0.5/include/SDL_opengles2_khrplatform.h
        _win/SDL2-2.0.5/include/SDL_pixels.h
        _win/SDL2-2.0.5/include/SDL_platform.h
        _win/SDL2-2.0.5/include/SDL_power.h
        _win/SDL2-2.0.5/include/SDL_quit.h
        _win/SDL2-2.0.5/include/SDL_rect.h
        _win/SDL2-2.0.5/include/SDL_render.h
        _win/SDL2-2.0.5/include/SDL_revision.h
        _win/SDL2-2.0.5/include/SDL_rwops.h
        _win/SDL2-2.0.5/include/SDL_scancode.h
        _win/SDL2-2.0.5/include/SDL_shape.h
        _win/SDL2-2.0.5/include/SDL_stdinc.h
        _win/SDL2-2.0.5/include/SDL_surface.h
        _win/SDL2-2.0.5/include/SDL_system.h
        _win/SDL2-2.0.5/include/SDL_syswm.h
        _win/SDL2-2.0.5/include/SDL_test.h
        _win/SDL2-2.0.5/include/SDL_test_assert.h
        _win/SDL2-2.0.5/include/SDL_test_common.h
        _win/SDL2-2.0.5/include/SDL_test_compare.h
        _win/SDL2-2.0.5/include/SDL_test_crc32.h
        _win/SDL2-2.0.5/include/SDL_test_font.h
        _win/SDL2-2.0.5/include/SDL_test_fuzzer.h
        _win/SDL2-2.0.5/include/SDL_test_harness.h
        _win/SDL2-2.0.5/include/SDL_test_images.h
        _win/SDL2-2.0.5/include/SDL_test_log.h
        _win/SDL2-2.0.5/include/SDL_test_md5.h
        _win/SDL2-2.0.5/include/SDL_test_random.h
        _win/SDL2-2.0.5/include/SDL_thread.h
        _win/SDL2-2.0.5/include/SDL_timer.h
        _win/SDL2-2.0.5/include/SDL_touch.h
        _win/SDL2-2.0.5/include/SDL_types.h
        _win/SDL2-2.0.5/include/SDL_version.h
        _win/SDL2-2.0.5/include/SDL_video.h
        _win/SDL2_ttf-2.0.14/include/SDL_ttf.h
        _win/tcc-x64/examples/dll.c
        _win/tcc-x64/examples/fib.c
        _win/tcc-x64/examples/hello_dll.c
        _win/tcc-x64/examples/hello_win.c
        _win/tcc-x64/examples/libtcc_test.c
        _win/tcc-x64/include/sec_api/sys/timeb_s.h
        _win/tcc-x64/include/sec_api/conio_s.h
        _win/tcc-x64/include/sec_api/crtdbg_s.h
        _win/tcc-x64/include/sec_api/io_s.h
        _win/tcc-x64/include/sec_api/mbstring_s.h
        _win/tcc-x64/include/sec_api/search_s.h
        _win/tcc-x64/include/sec_api/stdio_s.h
        _win/tcc-x64/include/sec_api/stdlib_s.h
        _win/tcc-x64/include/sec_api/stralign_s.h
        _win/tcc-x64/include/sec_api/string_s.h
        _win/tcc-x64/include/sec_api/tchar_s.h
        _win/tcc-x64/include/sec_api/time_s.h
        _win/tcc-x64/include/sec_api/wchar_s.h
        _win/tcc-x64/include/sys/fcntl.h
        _win/tcc-x64/include/sys/file.h
        _win/tcc-x64/include/sys/locking.h
        _win/tcc-x64/include/sys/stat.h
        _win/tcc-x64/include/sys/time.h
        _win/tcc-x64/include/sys/timeb.h
        _win/tcc-x64/include/sys/types.h
        _win/tcc-x64/include/sys/unistd.h
        _win/tcc-x64/include/sys/utime.h
        _win/tcc-x64/include/winapi/basetsd.h
        _win/tcc-x64/include/winapi/basetyps.h
        _win/tcc-x64/include/winapi/guiddef.h
        _win/tcc-x64/include/winapi/intrin.h
        _win/tcc-x64/include/winapi/poppack.h
        _win/tcc-x64/include/winapi/pshpack1.h
        _win/tcc-x64/include/winapi/pshpack2.h
        _win/tcc-x64/include/winapi/pshpack4.h
        _win/tcc-x64/include/winapi/pshpack8.h
        _win/tcc-x64/include/winapi/reason.h
        _win/tcc-x64/include/winapi/specstrings.h
        _win/tcc-x64/include/winapi/stralign.h
        _win/tcc-x64/include/winapi/tvout.h
        _win/tcc-x64/include/winapi/winbase.h
        _win/tcc-x64/include/winapi/wincon.h
        _win/tcc-x64/include/winapi/windef.h
        _win/tcc-x64/include/winapi/windows.h
        _win/tcc-x64/include/winapi/winerror.h
        _win/tcc-x64/include/winapi/wingdi.h
        _win/tcc-x64/include/winapi/winnetwk.h
        _win/tcc-x64/include/winapi/winnls.h
        _win/tcc-x64/include/winapi/winnt.h
        _win/tcc-x64/include/winapi/winreg.h
        _win/tcc-x64/include/winapi/winuser.h
        _win/tcc-x64/include/winapi/winver.h
        _win/tcc-x64/include/_mingw.h
        _win/tcc-x64/include/assert.h
        _win/tcc-x64/include/conio.h
        _win/tcc-x64/include/ctype.h
        _win/tcc-x64/include/dir.h
        _win/tcc-x64/include/direct.h
        _win/tcc-x64/include/dirent.h
        _win/tcc-x64/include/dos.h
        _win/tcc-x64/include/errno.h
        _win/tcc-x64/include/excpt.h
        _win/tcc-x64/include/fcntl.h
        _win/tcc-x64/include/fenv.h
        _win/tcc-x64/include/float.h
        _win/tcc-x64/include/inttypes.h
        _win/tcc-x64/include/io.h
        _win/tcc-x64/include/limits.h
        _win/tcc-x64/include/locale.h
        _win/tcc-x64/include/malloc.h
        _win/tcc-x64/include/math.h
        _win/tcc-x64/include/mem.h
        _win/tcc-x64/include/memory.h
        _win/tcc-x64/include/process.h
        _win/tcc-x64/include/setjmp.h
        _win/tcc-x64/include/share.h
        _win/tcc-x64/include/signal.h
        _win/tcc-x64/include/stdarg.h
        _win/tcc-x64/include/stdbool.h
        _win/tcc-x64/include/stddef.h
        _win/tcc-x64/include/stdint.h
        _win/tcc-x64/include/stdio.h
        _win/tcc-x64/include/stdlib.h
        _win/tcc-x64/include/string.h
        _win/tcc-x64/include/tcclib.h
        _win/tcc-x64/include/tchar.h
        _win/tcc-x64/include/time.h
        _win/tcc-x64/include/vadefs.h
        _win/tcc-x64/include/values.h
        _win/tcc-x64/include/varargs.h
        _win/tcc-x64/include/wchar.h
        _win/tcc-x64/include/wctype.h
        _win/tcc-x64/libtcc/libtcc.h
        _win/tcc-x86/examples/dll.c
        _win/tcc-x86/examples/fib.c
        _win/tcc-x86/examples/hello_dll.c
        _win/tcc-x86/examples/hello_win.c
        _win/tcc-x86/examples/libtcc_test.c
        _win/tcc-x86/include/sec_api/sys/timeb_s.h
        _win/tcc-x86/include/sec_api/conio_s.h
        _win/tcc-x86/include/sec_api/crtdbg_s.h
        _win/tcc-x86/include/sec_api/io_s.h
        _win/tcc-x86/include/sec_api/mbstring_s.h
        _win/tcc-x86/include/sec_api/search_s.h
        _win/tcc-x86/include/sec_api/stdio_s.h
        _win/tcc-x86/include/sec_api/stdlib_s.h
        _win/tcc-x86/include/sec_api/stralign_s.h
        _win/tcc-x86/include/sec_api/string_s.h
        _win/tcc-x86/include/sec_api/tchar_s.h
        _win/tcc-x86/include/sec_api/time_s.h
        _win/tcc-x86/include/sec_api/wchar_s.h
        _win/tcc-x86/include/sys/fcntl.h
        _win/tcc-x86/include/sys/file.h
        _win/tcc-x86/include/sys/locking.h
        _win/tcc-x86/include/sys/stat.h
        _win/tcc-x86/include/sys/time.h
        _win/tcc-x86/include/sys/timeb.h
        _win/tcc-x86/include/sys/types.h
        _win/tcc-x86/include/sys/unistd.h
        _win/tcc-x86/include/sys/utime.h
        _win/tcc-x86/include/winapi/basetsd.h
        _win/tcc-x86/include/winapi/basetyps.h
        _win/tcc-x86/include/winapi/guiddef.h
        _win/tcc-x86/include/winapi/intrin.h
        _win/tcc-x86/include/winapi/poppack.h
        _win/tcc-x86/include/winapi/pshpack1.h
        _win/tcc-x86/include/winapi/pshpack2.h
        _win/tcc-x86/include/winapi/pshpack4.h
        _win/tcc-x86/include/winapi/pshpack8.h
        _win/tcc-x86/include/winapi/reason.h
        _win/tcc-x86/include/winapi/specstrings.h
        _win/tcc-x86/include/winapi/stralign.h
        _win/tcc-x86/include/winapi/tvout.h
        _win/tcc-x86/include/winapi/winbase.h
        _win/tcc-x86/include/winapi/wincon.h
        _win/tcc-x86/include/winapi/windef.h
        _win/tcc-x86/include/winapi/windows.h
        _win/tcc-x86/include/winapi/winerror.h
        _win/tcc-x86/include/winapi/wingdi.h
        _win/tcc-x86/include/winapi/winnetwk.h
        _win/tcc-x86/include/winapi/winnls.h
        _win/tcc-x86/include/winapi/winnt.h
        _win/tcc-x86/include/winapi/winreg.h
        _win/tcc-x86/include/winapi/winuser.h
        _win/tcc-x86/include/winapi/winver.h
        _win/tcc-x86/include/_mingw.h
        _win/tcc-x86/include/assert.h
        _win/tcc-x86/include/conio.h
        _win/tcc-x86/include/ctype.h
        _win/tcc-x86/include/dir.h
        _win/tcc-x86/include/direct.h
        _win/tcc-x86/include/dirent.h
        _win/tcc-x86/include/dos.h
        _win/tcc-x86/include/errno.h
        _win/tcc-x86/include/excpt.h
        _win/tcc-x86/include/fcntl.h
        _win/tcc-x86/include/fenv.h
        _win/tcc-x86/include/float.h
        _win/tcc-x86/include/inttypes.h
        _win/tcc-x86/include/io.h
        _win/tcc-x86/include/limits.h
        _win/tcc-x86/include/locale.h
        _win/tcc-x86/include/malloc.h
        _win/tcc-x86/include/math.h
        _win/tcc-x86/include/mem.h
        _win/tcc-x86/include/memory.h
        _win/tcc-x86/include/process.h
        _win/tcc-x86/include/setjmp.h
        _win/tcc-x86/include/share.h
        _win/tcc-x86/include/signal.h
        _win/tcc-x86/include/stdarg.h
        _win/tcc-x86/include/stdbool.h
        _win/tcc-x86/include/stddef.h
        _win/tcc-x86/include/stdint.h
        _win/tcc-x86/include/stdio.h
        _win/tcc-x86/include/stdlib.h
        _win/tcc-x86/include/string.h
        _win/tcc-x86/include/tcclib.h
        _win/tcc-x86/include/tchar.h
        _win/tcc-x86/include/time.h
        _win/tcc-x86/include/vadefs.h
        _win/tcc-x86/include/values.h
        _win/tcc-x86/include/varargs.h
        _win/tcc-x86/include/wchar.h
        _win/tcc-x86/include/wctype.h
        _win/tcc-x86/libtcc/libtcc.h
        flappy/flappy.c)
